--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyPortfolio</title>
+    <title>My Portfolio</title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css"
       rel="stylesheet"
@@ -71,10 +71,10 @@
           </div>
           <div class="col-lg-4 text-center">
             <img
-              src="me.jpg"
+              src="me.png"
               alt="Your Picture"
               class="img-fluid"
-              style="border-radius: 10px"
+              style="border-radius: 60px"              
             />
           </div>
         </div>
