--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
       </div>
     </section>
 
-    <!-- About Section -->
+    <!-- About SectioN -->
+    
     <section id="about" class="py-5">
       <div class="container">
         <h2 class="section-title">About Me</h2>
