--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
-        <a class="navbar-brand" href="#">MiTH.</a>
+        <a class="navbar-brand" href="#home" style="transform: none; color: aliceblue;">MiTH.</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -81,8 +81,7 @@
       </div>
     </section>
 
-    <!-- About SectioN -->
-    
+    <!-- About Section -->
     <section id="about" class="py-5">
       <div class="container">
         <h2 class="section-title">About Me</h2>
