--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
           </div>
           <div class="col-lg-4 text-center">
             <img
-              src="me.png"
-              alt="Your Picture"
-              class="img-fluid"
-              style="border-radius: 60px"              
-            />
+            src="me.png"
+            alt="Your Picture"
+            class="img-fluid"
+            style="border-radius: 7px; width: 400px; height: 400px; object-fit: cover;"
+          />
+          
           </div>
         </div>
       </div>
