--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
           <div class="col-lg-4 text-center">
             <img
-            src="me.png"
+            src="me2.png"
             alt="Your Picture"
             class="img-fluid"
             style="border-radius: 7px; width: 400px; height: 400px; object-fit: cover;"
